--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,6 @@ dependencies:
   http: ^1.1.0
   intl: ^0.18.1
   
-  # Anúncios
-  google_mobile_ads: ^5.1.0
-  
-  # Compras in-app (SDK nativo)
-  in_app_purchase: ^3.2.0
-  
   # Persistência local
   shared_preferences: ^2.2.2
 
@@ -26,6 +20,19 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.2
+
+# Configuração do ícone do app
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
+  adaptive_icon_background: "#1A237E"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/icon/
