--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ app.*.map.json
 # Generated plugin registrants
 **/GeneratedPluginRegistrant.*
 **/generated_plugin_registrant.*
+**/generated_plugins.cmake
