--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: crypto_alert
-description: "Aplicativo Flutter para monitoramento de preço do Bitcoin em tempo real"
+name: nexus_stack
+description: "NexusStack - Monitor de criptomoedas com alertas e simulador de investimentos"
 publish_to: 'none'
-version: 1.0.0+1
+version: 2.0.0+1
 
 environment:
   sdk: ^3.5.3
